// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterHeader /> test renders correctly 1`] = `
<Fragment>
  <Grid
    hasGutter={true}
    md={12}
  >
    <GridItem>
      <Title
        headingLevel="h1"
        size="2xl"
      >
        Cluster with issues
      </Title>
    </GridItem>
    <GridItem>
      <Stack>
        <StackItem>
          <span>
            UUID: 
          </span>
          <span>
            foobar
          </span>
        </StackItem>
        <StackItem>
          <span>
            Last seen
            : 
          </span>
          <span>
            2021-07-24T14:22:36.109Z
          </span>
        </StackItem>
      </Stack>
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`<ClusterHeader /> test renders correctly when loading 1`] = `
<Fragment>
  <Grid
    hasGutter={true}
    md={12}
  >
    <GridItem>
      <Skeleton
        isDark={false}
        size="sm"
      />
    </GridItem>
    <GridItem>
      <Stack>
        <StackItem>
          <span>
            UUID: 
          </span>
          <span>
            foobar
          </span>
        </StackItem>
        <StackItem>
          <span>
            Last seen
            : 
          </span>
          <span>
            2021-07-24T14:22:36.109Z
          </span>
        </StackItem>
      </Stack>
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`<ClusterHeader /> test renders correctly without display name available 1`] = `
<Fragment>
  <Grid
    hasGutter={true}
    md={12}
  >
    <GridItem>
      <Title
        headingLevel="h1"
        size="2xl"
      >
        foobar
      </Title>
    </GridItem>
    <GridItem>
      <Stack>
        <StackItem>
          <span>
            UUID: 
          </span>
          <span>
            foobar
          </span>
        </StackItem>
        <StackItem>
          <span>
            Last seen
            : 
          </span>
          <span>
            2021-07-24T14:22:36.109Z
          </span>
        </StackItem>
      </Stack>
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`<ClusterHeader /> test renders correctly without last seen available 1`] = `
<Fragment>
  <Grid
    hasGutter={true}
    md={12}
  >
    <GridItem>
      <Title
        headingLevel="h1"
        size="2xl"
      >
        Cluster with issues
      </Title>
    </GridItem>
    <GridItem>
      <Stack>
        <StackItem>
          <span>
            UUID: 
          </span>
          <span>
            foobar
          </span>
        </StackItem>
      </Stack>
    </GridItem>
  </Grid>
</Fragment>
`;
